--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Samsondeen Kazeem</strong>.</h1>
+								<h1><strong>Samsondeen Kazeem</strong>.</h1>
 							</header>
 							<p>A dedicated and innovative individual with a passion for creativity and problem-solving technique. With a diverse background in Excel, Power Bi, Tableau, and SQL.</p>
 							<a href="#" class="button large scrolly">View My Resume</a>
