--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<h1><strong>Samsondeen Kazeem</strong>.</h1>
 							</header>
 							<p>A dedicated and innovative individual with a passion for creativity and problem-solving technique. With a diverse background in Excel, Power Bi, Tableau, and SQL.</p>
-							<a href="#" class="button large scrolly">View My Resume</a>
+							<a href="https://drive.google.com/file/d/1H1I-3PUoGLhcRMT-2o6fVjExLMoSU1II/view" class="button large scrolly">View My Resume</a>
 						</div>
 					</div>
 				</div>
@@ -107,7 +107,7 @@
 					</div>
 					<div class="col-6 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="Excel.html" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+							<a href="Excel.html" class="image featured"><img src="images/Data Analytics Bootcamp Certification of Completion.png" alt="" /></a>
 							<center><h3><a>Data Analyst Fellowship</a></h3></center>
 						</article>
 					</div>
