--- a/Excel.html
+++ b/Excel.html
@@ -51,11 +51,13 @@
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<p>This project is a visualization of transaction data from OList. OList is the largest department store in Brazil. 
-									The dataset has information on 90k orders from 2016 to 2018 made at multiple marketplaces in Brazil.</p>
+								<a href="https://samsidink600-my.sharepoint.com/personal/kazeemsam400_samsidink600_onmicrosoft_com/_layouts/15/Doc.aspx?sourcedoc={de089637-2bd6-4962-909f-6138691d7662}&action=embedview&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True" class="image featured"><img src="images/superstore dash picture 01.PNG" alt="" /></a>
+								<p>This project is a visualization of real Canadian superstore analysis. Real Canadian superstore is one among Canadian's largest hypermarket chain, offering a wide range of groceries, household goods, electronic, clothing and various other products. 
+									The dataset has information on the analysis of real canadian superstore.</p> <br> Recommendations <br> Conduct a detailed examination of RCSS's financial performance over multiple years, including revenue growth, profitability, margins, and liquidity ratios. Assess the effectiveness of its website, mobile app, and online ordering platforms in driving sales and customer engagement. By implementing these recommendations and conducting a comprehensive analysis of Real Canadian Superstore across various dimensions, stakeholders can gain valuable insights to inform strategic decision-making, drive operational improvements, and enhance overall business performance.
+
+
 								<style>button {padding: 0.3cm;}</style>
-								<center><a href="#">
+								<center><a href="https://samsidink600-my.sharepoint.com/personal/kazeemsam400_samsidink600_onmicrosoft_com/_layouts/15/Doc.aspx?sourcedoc={de089637-2bd6-4962-909f-6138691d7662}&action=embedview&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True">
 									<button id="scrollButton" class="scroll-button">Learn More</button>
 								</a></center>	
 							</article>
