--- a/Excel.html
+++ b/Excel.html
@@ -38,13 +38,13 @@
 								}
 							</style>
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/Interactive Dash Pic 01.PNG" alt="" /></a>
+								<a href="https://samsidink600-my.sharepoint.com/personal/kazeemsam400_samsidink600_onmicrosoft_com/_layouts/15/Doc.aspx?sourcedoc={a4e32b07-764b-4691-9b0d-233dc0cd7f36}&action=embedview&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True" class="image featured"><img src="images/Interactive Dash Pic 01.PNG" alt="" /></a>
 								<p>This project is a visualization on interactive sales dashboard trend analysis which offers a powerful tool for businesses to track sales performance, identify trends, and make data-driven decisions to achieve their sales objectives. 
 									By leveraging real-time data visualization, trend analysis, and actionable insights, businesses can gain a competitive edge, optimize sales strategies, and drive revenue growth.</p> <br> Recommendations <br>  Provide comprehensive training and support resources to help users effectively navigate and utilize the interactive sales dashboard.
 									Empower users to customize and personalize the interactive dashboard according to their specific needs, preferences, and objectives.
 									Encourage users to share insights, discuss findings, and collaborate on data-driven initiatives to improve sales performance and achieve common goals.
 									<style>button {padding: 0.3cm;}</style>
-									<center><a href="#">
+									<center><a href="https://samsidink600-my.sharepoint.com/personal/kazeemsam400_samsidink600_onmicrosoft_com/_layouts/15/Doc.aspx?sourcedoc={a4e32b07-764b-4691-9b0d-233dc0cd7f36}&action=embedview&wdAllowInteractivity=False&wdHideGridlines=True&wdHideHeaders=True&wdDownloadButton=True&wdInConfigurator=True&wdInConfigurator=True">
 										<button id="scrollButton" class="scroll-button">Learn More</button>
 									</a></center>
 							</article>
